2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/DefaultCompilerResult.cs: New Append method allows
	  merging two ICompilerResult objects.
	* MonoDevelop.Projects/DotNetProject.cs: A missing project reference is now
	  a warning, not an error. Fixes bug #337503.

2007-11-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/Combine.cs, MonoDevelop.Projects/CombineEntry.cs:
	  Made RootCombine overridable, which means that the root combine doesn't
	  need to be the root in the hierarchy. There could be for example several
	  branches with a root in each one.

2007-11-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/TypeNameResolver.cs: Don't return empty type
	  names. Fixes bug #338379.

2007-10-31  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Parser.Cecil/*:
	* MonoDevelop.Projects.mdp:
	* Makefile.am: Don't build Mono.Cecil.Mdb into the MonoDevelop.Projects 
	  dll, as we're now building it independently.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.addin.xml: Bump MD version.

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectFileCollection.cs: ProjectFile.Name is now a
	  normalized path, so there is no need to call GetFullPath. Fixes a
	  performance problem when looking for files.
	* MonoDevelop.Projects/ProjectFile.cs: Always work with normalized paths.
	* MonoDevelop.Projects.mdp: Updated.
	* MonoDevelop.Projects.Parser/DefaultParserService.cs: Flush the modified
	  databases after parsing files. Avoid adding System.Object as a base
	  class of System.Object (it happens when parsing mcs). Removed call to
	  GetParseableFileContent. We don't use that at all.
	* MonoDevelop.Projects.Parser/PersistentReturnType.cs,
	  MonoDevelop.Projects.Parser/DefaultReturnType.cs: Some memory
	  optimizations. Reuse common array dimension arrays and IReturnType
	  objects.