@@ -1,3 +1,9 @@
+2007-11-06  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Projects.Parser/PersistentProperty.cs,
+	  MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs: Fixed "Bug 337658
+	  - MD intellisense does not work for `value'".
+
 2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Projects/DefaultCompilerResult.cs: New Append method allows
